# vix

./: .gitignore  Cargo.toml  dummy.txt  note.txt
notes/: ptb_api.md
src/: app.rs  main.rs  piece_table.rs  tui.rs
src/document/: line_list.rs  mod.rs
src/piece_table/: mod.rs  proto.rs  vec.rs
