[package]
name = "vix"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Quality of life
thiserror = "1.0"
# Terminal manipulation
crossterm = "0.27"
ratatui = "0.26"
# Logging
log = "0.4"
simplelog = "0.12"
